--- a/Aula Curriculo/PerfilPessoal.html
+++ b/Aula Curriculo/PerfilPessoal.html
@@ -7,52 +7,69 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
+    <header style="border-style: solid; padding: 20px">
         <div style="display: flex; align-items: center;">        
             <img src="/Aula Curriculo/Elementos/pngtree-user-vector-avatar-png-image_1541962.jpg" style="height: 160px;">
             <div style="display: inline-block; margin: 12px;">            
                 <h1> Nome </h1>
-                <h4>PROFISSÃO</h4>
+                <h4>Profissão</h4>
                 <p style="text-align: justify;">Lorem ipsum dolor sit amet. Qui porro dolores eos voluptatem voluptas cum libero minus ea rerum amet in officia autem ab consequatur eaque At porro consectetur? Et earum ipsum rem rerum quas qui sint earum quo molestiae architecto est tenetur fuga? Sed cupiditate nihil aut quia laudantium non repellendus sapiente At beatae temporibus. Est galisum voluptates vel dolores velit et dolores velit quo doloribus adipisci non vero officia. Qui iste quibusdam et enim repellendus est dolores nesciunt ex mollitia consequatur ut accusantium voluptatem ut aliquid pariatur in similique suscipit. </p>  
             </div>
         </div> 
     </header>
 
-    <main>
-        <div style="display: flex;">        
+    <main style="border-style: solid; border-top: none; padding: 20px">
+        <div style="display: flex; ">        
             <div style="display: inline-block;">
-                <h1> Experiências </h1>
+                <h1> Formação </h1>
                 <p> Lorem ipsum dolor sit amet. Et nemo maiores et neque quae cum voluptatibus mollitia. Aut ipsum cupiditate est amet molestias et doloremque temporibus non deserunt esse et officia tenetur et ullam officia non totam exercitationem. 33 cupiditate doloribus At impedit magnam quo reiciendis dolorem ad rerum consequuntur vel repellendus inventore. Est quia commodi qui mollitia quisquam ea omnis veniam nam quia ratione et earum accusantium et dolores odit et aliquam facere! Est explicabo fugiat non officiis omnis et consectetur similique nam optio tenetur. Id corporis nesciunt 33 unde eius aut corporis impedit. 33 repudiandae modi eum voluptas velit et natus omnis et consequatur dolor est nostrum explicabo et velit earum. Et debitis veritatis quo voluptatem ratione non pariatur voluptates?
                 Sit quasi perspiciatis in maxime eaque et consequatur rerum. Et perferendis galisum sed minima voluptate ut autem eaque est pariatur delectus qui enim iusto. Est iusto dolor eos dolores maxime ut nihil possimus aut laborum deleniti nam aliquam repudiandae ex officiis placeat 33 labore eius. Et iste eaque vel accusantium error 33 quod omnis qui reiciendis architecto quo adipisci voluptatem. Est sint enim ut sunt nostrum est iure quidem est reprehenderit rerum. Et numquam voluptatum et molestiae labore ab sunt veritatis hic similique beatae est dolor molestias. Ab unde accusamus est fuga nihil est consequuntur illum est quidem consequatur ut omnis eaque rem cumque reprehenderit eum exercitationem tempora. Ut ipsa explicabo ea natus laborum ea numquam eveniet qui officia beatae ut odit distinctio aut facilis culpa et ipsam dicta. 33 fugit culpa et ipsam aperiam qui consequatur tempore qui magni minus cum voluptatibus officiis ex minima maxime.
                 </p>
             </div>
+            
             <div style="display: inline-block;"> 
-                <video src="/Aula Curriculo/Elementos/X2Download.app-Timelapse - Auroras Boreais(720p).mp4" style= "margin-left: 60px;margin-top: 36px; width: 340px;"controls>
+                <video src="/Aula Curriculo/Elementos/X2Download.app-Timelapse - Auroras Boreais(720p).mp4" style= "margin-left: 60px; margin-top: 36px; width: 380px;"controls>
+            </div>
+        </div>
+
+        <div style="display: block;">
+            <div style="display: inline-block;"> 
+                <h1> Experiências </h1>
+                
+                <ul>
+                    <li> Sit quibusdam voluptas et consequuntur laudantium. </li> <br>
+                    <li> Qui voluptatibus ipsa ab corporis harum ut cumque quae! </li> <br>
+                    <li> Ea alias debitis eum repellat facere. </li> <br>
+                    <li> Sit iure recusandae ut fugit accusantium a consequuntur pariatur et veniam sunt ab laudantium quia. </li> <br>
+                    <li> Et atque galisum non distinctio quam ab voluptas fugit. </li> 
+                </ul>
+            </div>
+
+            <div style="display: block; float: right; margin-top: 20px;"> 
+                <img src="/Aula Curriculo/Elementos/CERTIFICADO-DO-CURSO-DE-INFORMÁTICA-ONLINE-1024x724.jpg" style="width: 380px;">
             </div>
         </div>
 
         <div>
-            <h1> Formação </h1>
-            <ul>
-                <li> Sit quibusdam voluptas et consequuntur laudantium. </li> <br>
-                <li> Qui voluptatibus ipsa ab corporis harum ut cumque quae! </li> <br>
-                <li> Ea alias debitis eum repellat facere. </li> <br>
-            </ul>
-        </div>
-
-        <div>
-        <h1> Informações Adicionais </h1>
-        <p> Cum omnis obcaecati et vitae quis. </p> 
-        <p> Qui voluptatem molestias et omnis nesciunt qui distinctio dolorem non eligendi dolorum. </p> 
-        <p> Sed voluptatum voluptate et fugiat corrupti. </p> 
-        <p> Eos aperiam repudiandae sed nisi distinctio sed earum molestiae et necessitatibus minima? </p> 
+            <h1> Informações Adicionais </h1>
+                <p>Lorem ipsum dolor sit amet. Ut quia beatae ut minima harum sit perferendis illum ut rerum iste ut delectus earum et quidem nulla. Cum illo repellat aut fugit incidunt qui quam magni qui iure alias ut distinctio perspiciatis aut nihil mollitia ea earum soluta. Aut recusandae nulla nam internos suscipit aut eaque assumenda et odit facere 33 accusantium internos et quia delectus est omnis nihil. Eum perferendis consequatur id dicta maiores ea deserunt natus vel dolores eveniet rem nesciunt sequi. Et vero illo hic laudantium galisum nam exercitationem corrupti. Et culpa adipisci qui adipisci omnis nam dolorum quod. Aut porro eligendi ut earum reprehenderit non provident error sit quisquam voluptatem eum reprehenderit voluptas ad dolor fugiat. Ut totam possimus qui exercitationem neque eum expedita unde qui possimus magni ea omnis expedita cum omnis quia non saepe quasi.</p> 
         </div>
     </main>
-<footer style="text-decoration: none;">
-    <p> Lorem ipsum dolor sit amet. Aut omnis harum eum impedit iusto ea deleniti nesciunt qui magnam deleniti. Non itaque deserunt vel quis facere non beatae nesciunt At animi ducimus. Et quia sequi et voluptate itaque sed velit quod 33 voluptas praesentium. Est modi voluptas est enim doloremque quo iure voluptatem ut optio ipsum 33 placeat dolorem? Eos iste Quis est omnis pariatur eum asperiores tempora et cupiditate quasi et officiis officiis hic maiores illum qui consequatur deleniti. Et quas ipsum ab minima quas sed minus ipsa aut impedit voluptates aut rerum accusamus At voluptatum voluptatem et animi voluptatum! Aut minima ullam vel vitae molestias est quasi voluptas qui deleniti voluptates et sint natus aut quidem voluptas. Nam nemo incidunt vel ullam quis hic quas eius non molestiae delectus et galisum quaerat aut odit magnam? Sed voluptatibus aperiam et iusto fugiat vel veritatis repellendus et dolorem sint eum repudiandae placeat et incidunt architecto id autem labore. Sit nesciunt reiciendis et error molestiae ut possimus sint et placeat itaque qui optio aperiam qui quis velit qui saepe dolore! Ut tempora fugiat id beatae esse aut dolorem necessitatibus. In vero facere eum consequatur nesciunt et impedit minima sit beatae libero ut perferendis veniam ea corrupti aliquid qui quidem sint. Sed officia veniam aut ullam voluptate sit nesciunt dolorem vel doloribus fugit cum doloremque labore non eveniet nulla. Aut dolor recusandae ut expedita asperiores aut eaque galisum aut modi quia. </p>
-    <a href="https://eadcampus.spo.ifsp.edu.br/pluginfile.php/1002998/mod_resource/content/1/screencapture-wireframe-cc-hOVK9P-2023-03-06-17_20_36.png"> Protótipo </a> <br>
-    <a href="https://eadcampus.spo.ifsp.edu.br/course/view.php?id=8121"> Matéria </a><br>
-    <a href="view-source:https://eadcampus.spo.ifsp.edu.br/pluginfile.php/1003161/mod_resource/content/1/Teste.html"> Sugestões </a> <br>
+<footer style="border-style: solid; border-top: none; padding: 20px;">
+    <div style="display: flex;"> 
+
+        <div style="display: inline-block;"> 
+            <p> Lorem ipsum dolor sit amet. Aut omnis harum eum impedit iusto ea deleniti nesciunt qui magnam deleniti. Non itaque deserunt vel quis facere non beatae nesciunt At animi ducimus. Et quia sequi et voluptate itaque sed velit quod 33 voluptas praesentium. Est modi voluptas est enim doloremque quo iure voluptatem ut optio ipsum 33 placeat dolorem? Eos iste Quis est omnis pariatur eum asperiores tempora et cupiditate quasi et officiis officiis hic maiores illum qui consequatur deleniti. Et quas ipsum ab minima quas sed minus ipsa aut impedit voluptates aut rerum accusamus At voluptatum voluptatem et animi voluptatum! Aut minima ullam vel vitae molestias est quasi voluptas qui deleniti voluptates et sint natus aut quidem voluptas. Nam nemo incidunt vel ullam quis hic quas eius non molestiae delectus et galisum quaerat aut odit magnam? Sed voluptatibus aperiam et iusto fugiat vel veritatis repellendus et dolorem sint eum repudiandae placeat et incidunt architecto id autem labore. Sit nesciunt reiciendis et error molestiae ut possimus sint et placeat itaque qui optio aperiam qui quis velit qui saepe dolore! Ut tempora fugiat id beatae esse aut dolorem necessitatibus. In vero facere eum consequatur nesciunt et impedit minima sit beatae libero ut perferendis veniam ea corrupti aliquid qui quidem sint. Sed officia veniam aut ullam voluptate sit nesciunt dolorem vel doloribus fugit cum doloremque labore non eveniet nulla. Aut dolor recusandae ut expedita asperiores aut eaque galisum aut modi quia. </p>
+                <a href="https://eadcampus.spo.ifsp.edu.br/pluginfile.php/1002998/mod_resource/content/1/screencapture-wireframe-cc-hOVK9P-2023-03-06-17_20_36.png" style="text-decoration: none; color: black;"> Protótipo </a>
+                <a href="https://eadcampus.spo.ifsp.edu.br/course/view.php?id=8121" style="text-decoration: none; color: black;"> Matéria </a>
+                <a href="https://eadcampus.spo.ifsp.edu.br/pluginfile.php/1003161/mod_resource/content/1/Teste.html" style="text-decoration: none; color: black;"> Sugestões </a>
+            <audio controls style="margin-left: 980px;"> <source src="/Aula Curriculo/Elementos/R a i n y   n i g h t s -  Lofi.mp3" type="audio/mpeg">  </audio>
+        </div>
+
+        <div style="display: inline-block; margin-left: 90px;"> 
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3773262.0243551745!2d-50.87930543950356!3d-22.548182578940626!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce597d462f58ad%3A0x1e5241e2e17b7c17!2sS%C3%A3o%20Paulo%2C%20Brasil!5e0!3m2!1spt-PT!2sus!4v1678496530515!5m2!1spt-PT!2sus" width="480" height="320" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </div>      
 </footer>
 </body>
 </html>
