--- a/Proj1 - Portfolio/portfolio.html
+++ b/Proj1 - Portfolio/portfolio.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.css">
     <link rel='stylesheet' href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' >
     <title>Portfolio - Erick</title>
+    <link rel="logopage" href="../Proj1 - Portfolio/images/Logo.png">
 </head>
  <body>
     <div class="background">
@@ -57,12 +58,12 @@
                     gosto de trabalhar em equipe e me encontro apto a novas aprendizagens/experiências
                     no mercado de trabalho.
                 </p>
-                <button class="button"> Acesse meu Currículo </button>
+                <a href="/curriculo/Currículo Simples.pdf" download="Currículo Simples.pdf" type="application/pdf"><button class="button"> Acesse meu Currículo </button></a>
                 </div>
             </div>
     </section> <!--background-sobre-->
 
-<section id="habilidades">
+<section id="habilidades"> <!--Seção Habilidades-->
     <div class="header-skill-head">
         <h1><span>Habilidades</span></h1>
         <p> Aqui estão as minhas habilidades que possuo e estou desenvolvendo com Linguagens de Marcação, Programação e também Banco de Dados.
@@ -98,6 +99,7 @@
 <div class="skill-bar">
     <div class="info">
         <p> C </p>
+        <p class="percent"> 60%</p>
             </div>
     <div class="bar">
         <span class="c"> </span>
@@ -220,7 +222,7 @@
             </div>
 
             <div class="fim">
-                <p>Create por Erick Santos Brito</p>
+                <p>Criado por Erick Santos Brito</p>
             </div>
     </section>
 </body>
