--- a/Eleos/Recuperar Senha/index.html
+++ b/Eleos/Recuperar Senha/index.html
@@ -15,6 +15,7 @@
                 <div class="register-container">
             <div class="top">
             <h1>Esqueceu a senha?</h1>
+            <p>Basta fornecer o endereço de e-mail associado à sua conta e enviaremos instruções detalhadas sobre como criar uma nova senha.</p>
             </div>
                 <form method="POST" action="">
                         <div class="input-box">
@@ -22,19 +23,8 @@
                             <input type="email" class="input-field" placeholder="Digite seu endereço de email" required>
                             <i class="bx bx-envelope"></i>
                         </div>
-                        <div class="input-box">
-                            <label for="senha">Código enviado por email</label>
-                            <input type="password" class="input-field" placeholder="Digite o código recebido" required>
-                            <i class='bx bx-key'></i>
-                        </div>
-                        <div class="input-box">
-                            <label for="senha">Nova senha:</label>
-                            <input type="password" class="input-field" placeholder="Digite sua nova senha" required>
-                            <i class='bx bx-lock-open-alt' ></i>
-                        </div>
-                        
                             <div class="input-box">
-                            <input type="submit" class="submit" value="Criar Conta">
+                            <input type="submit" class="submit" value="Continuar">
                             </div>
                         </div>
                         </form>
