--- a/Eleos/Cadastro/index.html
+++ b/Eleos/Cadastro/index.html
@@ -16,9 +16,9 @@
             <div class="top">
             <h1>Primeira vez aqui?</h1>
             <p>Estamos felizes em recebê-lo no <b>Eleos</b>, um lugar onde a generosidade encontra o poder de transformar vidas. Ao criar sua conta, você terá acesso a uma plataforma que conecta doadores como você às ONGs que estão fazendo um impacto real no mundo. Vamos começar a fazer a diferença juntos!</p>
-            <span>Já tem uma conta? <a href="#" onclick="login()">Login</a></p>
+            <span>Já tem uma conta? <a href="/Login/index.html" onclick="login()">Login</a></p>
             </div>
-                <form method="POST" action="form.php">
+                <form method="POST" action="">
                 <div class="two-forms">
                     <div class="input-box">
                         <label for="nome">Nome:</label>
