--- a/Eleos/Home/index.html
+++ b/Eleos/Home/index.html
@@ -14,7 +14,7 @@
             <a class="active" href="#home">Página Inicial</a>
             <a id="item" href="#">Quero Doar</a>
             <a id="item" href="#">Campanhas</a>
-            <a id="item" href="#">Contato</a>
+            <a id="item" href="/Contato/index.html">Contato</a>
             <a  href="/Login/index.html" class="login">Login</a>
             <a href="/Cadastro/index.html" class="cadastro">Cadastre-se</a>
         </div>
@@ -92,6 +92,11 @@ Nós acreditamos que todos têm o poder de fazer mudanças significativas, não 
 Explore nosso sistema e descubra as incríveis ONGs parceiras que estão transformando o mundo com seu trabalho incansável.<br><br>
 Não espere mais para começar a fazer parte dessa corrente do bem. Sua doação pode ser a esperança que alguém precisa, o apoio que uma causa necessita ou a mudança que o mundo anseia.
 A equipe Eleos
-</p></div>
+</p>
+</div>
 
 </div>
+<footer>
+    <h3>Eleos.</h3>
+    <a href="/Politica de Privacidade/index.html">Política de Privacidade</a>
+</footer>
