--- a/Eleos/Home/index.html
+++ b/Eleos/Home/index.html
@@ -12,8 +12,8 @@
         <a class="logo" href="#">Eleos</a>
         <div class="header-right">
             <a class="active" href="#home">Página Inicial</a>
-            <a id="item" href="#">Quero Doar</a>
-            <a id="item" href="#">Campanhas</a>
+            <a id="item" href="#donation">Quero Doar</a>
+            <a id="item" href="#donation">Campanhas</a>
             <a id="item" href="/Contato/index.html">Contato</a>
             <a  href="/Login/index.html" class="login">Login</a>
             <a href="/Cadastro/index.html" class="cadastro">Cadastre-se</a>
@@ -26,7 +26,7 @@
             <p class="descricao">Junte-se a nós nesta jornada de solidariedade. Sua contribuição é a esperança que alguém precisa, o suporte que uma causa necessita e o combustível para um mundo melhor.<br><br>Faça a diferença hoje conosco.</p>
             <div class="left-flex">
                 <a href="/Login/index.html"><button>QUERO MUDAR O MUNDO!</button></a>
-                <span id="span">Saiba mais</span>
+                <a href="#donation"><span id="span">Saiba mais</span></a>
             </div>
         </div>
         <div class="right">
