--- a/Eleos/Cadastro/index.html
+++ b/Eleos/Cadastro/index.html
@@ -54,14 +54,14 @@
                         <div class="two-col">
                             <div class="one">
                                 <input type="checkbox" name="Termos e condicoes" id="termos">
-                                <label for="termos"> Declaro que li e concordo com os <a href="#">Termos de Uso</a> de “Doações Eleos”.</label>
+                                <label for="termos"> Declaro que li e concordo com os <a href="/Politica de Privacidade/index.html">Termos de Uso</a> de “Doações Eleos”.</label>
                             </div>
                             <div class="two">
                                 <input type="checkbox" name="notificacoes" id="notificacoes">
                                 <label for="notificacoes"> Desejo receber notificações por E-mail relacionadas às minhas doações, atualizações de campanhas e novidades sobre as ONGs.</label>
                             </div>
                             <div class="input-box">
-                            <input type="submit" class="submit" value="Criar Conta">
+                            <input type="submit" href="/Home/index.html" class="submit" value="Criar Conta">
                             </div>
                         </div>
                         </form>
