--- a/Eleos/Home/index.html
+++ b/Eleos/Home/index.html
@@ -84,7 +84,7 @@
     </div>
 </div>
 <div class="sobrenos">
-    <div class="sobre-content"><h2>Quem somos?</h2>
+    <div class="sobre-content"><h2>Sobre nós.</h2>
 <p class="para">
     Aqui, acreditamos no poder transformador das pequenas ações. Estamos comprometidos em conectar pessoas generosas a organizações que fazem a diferença em nossas comunidades.<br><br>
 Junte-se a nós nessa jornada de solidariedade e empatia. Cada doação que você fizer através do nosso sistema terá um impacto real, ajudando a melhorar vidas, preservar o meio ambiente e construir um mundo mais justo.
@@ -97,6 +97,13 @@ A equipe Eleos
 
 </div>
 <footer>
-    <h3>Eleos.</h3>
-    <a href="/Politica de Privacidade/index.html">Política de Privacidade</a>
+    <div class="container">
+        <h1 class="Logo2">Eleos.</h1>
+        <p>A Eleos é uma organização dedicada a fazer a diferença no mundo. Nossa missão é oferecer apoio e esperança àqueles que mais precisam, através de nossos programas de entrega de doações. Com a generosidade de pessoas como você, conseguimos impactar positivamente inúmeras vidas.</p>
+        <a href="#">Informações</a>
+        <a href="/Politica de Privacidade/index.html">| Política de Privacidade |</a>
+        <a href="/Contato/index.html">Entre em contato</a>
+    </div>
+    <p class="copyright">&copy; 2023 Doações Eleos | Eleos</p>
 </footer>
+    
