--- a/Eleos/Login/index.html
+++ b/Eleos/Login/index.html
@@ -24,7 +24,7 @@
                     <input type="password" class="input-field" placeholder="Digite sua senha" required>
                     <i class='bx bx-lock-open-alt' ></i>
                     </div>
-                    <a href="#">Esqueceu sua senha?</a>
+                    <a href="/Recuperar Senha/index.html">Esqueceu sua senha?</a>
                     <div class="input-box">
                         <input type="submit" class="submit" value="Entrar">
                 </div>  
