--- a/Eleos/Contato/index.html
+++ b/Eleos/Contato/index.html
@@ -8,39 +8,33 @@
     <title>Login</title>
 </head>
 <body>
+    <header>
+                <a class="logo" href="#">Eleos</a>
+                <div class="header-right">
+                    <a id="item" href="/Home/index.html">Página Inicial</a>
+                    <a id="item" href="#donation">Quero Doar</a>
+                    <a id="item" href="#donation">Campanhas</a>
+                    <a class="active" href="/Contato/index.html">Contato</a>
+                    <a  href="/Login/index.html" class="login">Login</a>
+                    <a href="/Cadastro/index.html" class="cadastro">Cadastre-se</a>
+                </div>
+            </header>
     <main>
-        <div class="left-side">
-            <div class="content">
-                <!-- Conteúdo do lado esquerdo -->
-                <h1 id="title1">Vamos conversar</h1>
-                <h3>Tem perguntas ou precisa de assistência? Estamos aqui para ajudar! Por favor, não hesite em entrar em contato conosco com todas as suas questões, comentários ou solicitações. </h3>
-                <div class="input-box">
-                    <label for="name">Nome:</label><br>
-                    <input type="name" class="input-field" placeholder="" required>
-                  
+            <div class="conteiner">
+                <div class="left">
+                    <h1>Contatos</h1>
+                    <p class="descricao">Nossa equipe está ansiosa para ouvir você e trabalhar juntos para causar um impacto positivo no mundo. Seja uma pergunta, sugestão ou desejo de se envolver, estamos aqui para ajudar. Não hesite, entre em contato conosco hoje mesmo e junte-se à nossa missão de mudar vidas!<br><br>
+                        <i class='bx bx-envelope'></i>doacoeseleos@gmail.com<br>
+                        <i class='bx bx-phone'></i>Em breve.
+                    </p>
+
+                    <div class="left-flex">
+                        <a href="#"><button>Ler mais</button></a>
+                    </div>
                 </div>
-                <div class="input-box">
-                    <label for="email">E-mail:</label>
-                    <input type="email" class="input-field" placeholder="" required>
-                </div>
-                <div class="input-box">
-                    <label for="mensagem">Mensagem:</label><br>
-                    <textarea name="mensagem" class="input-field" id="mensagem" cols="10" rows="30">                       
-                    </textarea>
-                </div>
-                <div class="input-box">
-                    <input type="submit" class="submit" value="Enviar">
-            </div>  
-                </div>  
-            </div>
-        </div>
-        <div class="right-side">
-            <div class="content">
-            <div class="right">
-                <div class="card">
+                <div class="right">
                     <img src="/images/Messages-pana.svg" alt="">
                 </div>
-            </div> 
             </div>
     </main>
 </body>
