--- a/Eleos/Home/index.html
+++ b/Eleos/Home/index.html
@@ -12,7 +12,6 @@
         <a class="logo" href="#">Eleos</a>
         <div class="header-right">
             <a class="active" href="#home">Página Inicial</a>
-            <a id="item" href="#donation">Quero Doar</a>
             <a id="item" href="#donation">Campanhas</a>
             <a id="item" href="/Contato/index.html">Contato</a>
             <a  href="/Login/index.html" class="login">Login</a>
@@ -65,11 +64,15 @@
         <div class="textos"><h2>Como realizar uma doação</h2>
         <p class="para">Queremos tornar o processo de doação o mais fácil e eficiente possível. Para ajudá-lo nessa jornada de generosidade, criamos um simples passo a passo que permite que você faça suas doações de forma rápida e conveniente. <b>Veja como funciona:</b></p></div>
     <div class="cards-container">
-        
         <div class="card">
             <img class="img-tuto" src="/images/Account-amico.svg" alt="Ilustração de Acesso à Conta">
             <h3>Acesso à Conta</h3>
             <p >O usuário entra em sua conta pessoal no sistema, utilizando seu nome de usuário e senha.</p>
+        </div>
+        <div class="card">
+            <img class="img-tuto" src="/images/Select-cuate.svg" alt="Ilustração de Acesso à Conta">
+            <h3>Selecione a Campanha</h3>
+            <p >O usuário escolhe a causa que deseja apoiar entre várias opções disponíveis.</p>
         </div>
         <div class="card">
             <img class="img-tuto" src="/images/Forms-amico.svg" alt="Ilustração de Acesso à Conta">
