Update text of portfolio

--- a/Proj1 - Portfolio/portfolio.html
+++ b/Proj1 - Portfolio/portfolio.html
@@ -45,16 +45,15 @@
                 <h2>Sobre <span>Mim</span></h2>
                 <h5> Estudante & <span>Desenvolvedor</span> & Assistente Administrativo </h5>
                 <hr>
-                <p> Meu nome é Erick Santos Brito, nasci em Janeiro de 2005 e moro em São Paulo
-                    Com meus 18 anos, atuo como Aprendiz dentro da Empresa Brasileira de Correios
-                    e Telégrafos.<br> Estou no meu terceiro
-                    ano do ensino médio dentro do IFSP, onde sou estudante integrado ao curso
+                <p> Meu nome é Erick Santos Brito, nasci em Janeiro de 2005 e moro em São Paulo.
+                    Com meus 19 anos, atualmente, sou estagiário na São Paulo Previdência - SPPREV. Mas também, tive experiência como Aprendiz administrativo dentro da Empresa Brasileira de Correios
+                    e Telégrafos.<br> Estou no meu quarto e último
+                    ano do ensino médio dentro do IFSP, onde sou estudante integrado ao curso técnico
                     de Informática.<br>
                     Desde pequeno, sempre tive interesse pelo visual(design), e com o decorrer
                     do curso venho me interessando e me aproximando cada vez mais dessa área.
-                    Hoje, almejo uma oportunidade para me aprofundar na área da <span>Programação Web</span>,
-                    por isso eu estou em busca de um estágio, no qual eu consiga desenvolver
-                    meu aprendizado, agregar a empresa e poder construir de forma crescente e contínua o meu futuro,
+                    Hoje, almejo uma oportunidade para me aprofundar na área da <span>Programação Web</span>, ou quem sabe na área de Infraestrutura de Redes,
+                    e consiga desenvolver meu aprendizado, agregar a empresa e poder construir de forma crescente e contínua o meu futuro,
                     gosto de trabalhar em equipe e me encontro apto a novas aprendizagens/experiências
                     no mercado de trabalho.
                 </p>
