[fix]: altera a foto e diminui weight da fonte

--- a/Portfolio - 2025/index.html
+++ b/Portfolio - 2025/index.html
@@ -32,7 +32,7 @@
     </a>
 
     <div class="welcome">
-        <img src="/portfolio.jpg" alt="">
+        <img src="/memoji.webp" alt="">
         <h1>Construindo identidades digitais que conectam, convertem e impressionam.</h1>
         <a href="#projetos" class="btn">Conheça mais</a>
     </div>
