[fix]: diminuindo textos da navbar

--- a/ControleFinanceiro/index.html
+++ b/ControleFinanceiro/index.html
@@ -29,7 +29,7 @@
             <li class="side-item active">
                 <a href="">
                     <i class="fa-solid fa-chart-line"></i>
-                    <span class="item-description">Dashboard (Página principal)</span>
+                    <span class="item-description">Dashboard</span>
                 </a>
             </li>
 
@@ -43,7 +43,7 @@
             <li class="side-item">
                 <a href="">
                     <i class="fa-solid fa-money-bill-transfer"></i>
-                    <span class="item-description">Lançamentos / Transações</span>
+                    <span class="item-description">Lançamentos/<br>Transações</span>
                 </a>
             </li>
 
