--- a/Portfolio - 2025/index.html
+++ b/Portfolio - 2025/index.html
@@ -14,6 +14,9 @@
     <header>
         <div class="container">
             <h1 class="logo"> Erick Santos Brito </h1>
+            <input type="checkbox" id="menu-toggle">
+            <label for="menu-toggle" class="menu-icon"><i class="fa fa-bars"></i></label>
+            
             <nav>
             <ul class="nav-menu">
                 <li><a id="inicio" href="#inicio">Início</a></li>
@@ -156,7 +159,7 @@
     <div class="projeto">
       <h3>Nutriação</h3>
       <p>Landing page para plataforma inteligente de doação de alimentos.</p>
-      <a href="https://github.com/ericksntz/nutriacao" target="_blank">Ver no GitHub</a>
+      <a href="https://nutriacao.github.io/NutriAcao/NutriAcao-LandingPage/pages/homepage.html" target="_blank">Ver no GitHub</a>
     </div>
     <div class="projeto">
       <h3>Jornada da Esperança</h3>
@@ -178,13 +181,29 @@
 </section>
 
 <section class="contato" id="contato">
-  <h2><i class="fa-solid fa-envelope"></i> Contato</h2>
-  <p>Está precisando de um site ou quer trocar uma ideia? Me chama:</p>
-  <ul>
-    <li><i class="fa-brands fa-whatsapp"></i> <a href="https://wa.me/11966340498" target="_blank">(11) 96634-0498</a></li>
-    <li><i class="fa-solid fa-envelope"></i> <a href="mailto:erickbrito@outlook.com.br">erickbrito@outlook.com.br</a></li>
-    <li><i class="fa-brands fa-linkedin"></i> <a href="https://linkedin.com/in/erick-santos-brito" target="_blank">LinkedIn</a></li>
-  </ul>
+  <div class="contact-flex-left">
+    <h2><i class="fa-solid fa-envelope"></i> Contato</h2>
+    <p>Está precisando de um site ou quer trocar uma ideia? Me chama:</p>
+    <ul>
+      <li><i class="fa-brands fa-whatsapp" id="contact-icon"></i> <a href="https://wa.me/11966340498" target="_blank">(11) 96634-0498</a></li>
+      <li><i class="fa-solid fa-envelope" id="contact-icon"></i> <a href="mailto:erickbrito@outlook.com.br">erickbrito@outlook.com.br</a></li>
+      <li><i class="fa-brands fa-linkedin" id="contact-icon"></i> <a href="https://linkedin.com/in/erick-santos-brito" target="_blank">LinkedIn</a></li>
+    </ul>
+  </div>
+  <div class="contact-flex-right">
+  <form action="post">
+    <label for="nome">Nome</label>
+    <input type="text" id="nome" name="nome" placeholder="Digite seu nome" required>
+
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" placeholder="exemplo@email.com" required>
+
+    <label for="mensagem">Mensagem</label>
+    <textarea id="mensagem" name="mensagem" cols="30" rows="5" placeholder="Escreva sua mensagem aqui..." required></textarea>
+
+    <button type="submit">Enviar</button>
+  </form>
+</div>
 </section>
 
 <footer class="footer">
