[adjust]: link serviços no menu e organizando codigo do header

--- a/Portfolio - 2025/index.html
+++ b/Portfolio - 2025/index.html
@@ -12,22 +12,23 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <h1 class="logo"> Erick Santos Brito </h1>
-            <input type="checkbox" id="menu-toggle">
-            <label for="menu-toggle" class="menu-icon"><i class="fa fa-bars"></i></label>
-            
-            <nav>
-            <ul class="nav-menu">
-                <li><a id="inicio" href="#inicio">Início</a></li>
-                <li><a href="#servicos">Serviços</a></li>
-                <li><a href="#sobre">Sobre</a></li>
-                <li><a href="#habilidades">Habilidades</a></li>
-                <li><a href="#projetos">Projetos</a></li>
-                <a href="#contato" class="btn-cta">Fale Comigo</a>
-            </ul>
-            </nav>
-        </div>
+      <div class="container">
+        <h1 class="logo">Erick Santos Brito</h1>
+
+        <input type="checkbox" id="menu-toggle">
+        <label for="menu-toggle" class="menu-icon"><i class="fa fa-bars"></i></label>
+
+        <nav>
+          <ul class="nav-menu">
+            <li><a id="inicio" href="#inicio">Início</a></li>
+            <li><a href="#servicos">Serviços</a></li>
+            <li><a href="#sobre">Sobre</a></li>
+            <li><a href="#habilidades">Habilidades</a></li>
+            <li><a href="#projetos">Projetos</a></li>
+            <a href="#contato" class="btn-cta">Fale Comigo</a>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <a href="#inicio" class="btn-topo" title="Voltar ao início">
@@ -40,7 +41,7 @@
         <a href="#projetos" class="btn">Conheça mais</a>
     </div>
 
-    <div class="servicos">
+    <div class="servicos" id="servicos">
     <div class="servicos-container">
         
         <div class="servico">
