--- a/Portfolio - 2025/index.html
+++ b/Portfolio - 2025/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
       <div class="container">
-        <h1 class="logo">Erick Santos Brito</h1>
+        <img class="logo" src="/signature.png"></img>
 
         <input type="checkbox" id="menu-toggle">
         <label for="menu-toggle" class="menu-icon"><i class="fa fa-bars"></i></label>
