[feat]: adicionando imagens dos projetos

--- a/Portfolio - 2025/index.html
+++ b/Portfolio - 2025/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
       <div class="container">
-        <img class="logo" src="/signature.png"></img>
+        <img class="logo" src="assets/signature.png"></img>
 
         <input type="checkbox" id="menu-toggle">
         <label for="menu-toggle" class="menu-icon"><i class="fa fa-bars"></i></label>
@@ -36,7 +36,7 @@
     </a>
 
     <div class="welcome">
-        <img src="/memoji.webp" alt="">
+        <img src="/assets/memoji.webp" alt="">
         <h1>Construindo identidades digitais que conectam, convertem e impressionam.</h1>
         <a href="#projetos" class="btn">Conheça mais</a>
     </div>
@@ -157,25 +157,37 @@
 <section class="projetos" id="projetos">
   <h2><i class="fa-solid fa-laptop-code"></i> Projetos</h2>
   <div class="projetos-container">
-    <div class="projeto">
-      <h3>Nutriação</h3>
-      <p>Landing page para plataforma inteligente de doação de alimentos.</p>
-      <a href="https://nutriacao.github.io/NutriAcao/NutriAcao-LandingPage/pages/homepage.html" target="_blank">Ver no GitHub</a>
+
+    <div class="projeto" id="nutriacao">
+      <div class="projeto-overlay">
+        <h3>Nutriação</h3>
+        <p>Landing page para plataforma inteligente de doação de alimentos.</p>
+        <a href="https://nutriacao.github.io/NutriAcao/NutriAcao-LandingPage/pages/homepage.html" target="_blank">Ver no GitHub</a>
+      </div>
     </div>
-    <div class="projeto">
-      <h3>Jornada da Esperança</h3>
-      <p>Jogo 2D sobre detecção precoce de câncer infantil e apoio psicológico.</p>
-      <a href="https://github.com/ericksntz/jornada-da-esperanca" target="_blank">Ver no GitHub</a>
+
+    <div class="projeto" id="jornada">
+      <div class="projeto-overlay">
+        <h3>Jornada da Esperança</h3>
+        <p>Jogo 2D sobre detecção precoce de câncer infantil e apoio psicológico.</p>
+        <a href="https://github.com/ericksntz/jornada-da-esperanca" target="_blank">Ver no GitHub</a>
+      </div>
     </div>
-    <div class="projeto">
-      <h3>Rostie</h3>
-      <p>Plataforma para gerenciamento de dispensa e recomendação de receitas.</p>
-      <a href="https://github.com/ericksntz/jornada-da-esperanca" target="_blank">Ver no GitHub</a>
+
+    <div class="projeto" id="rostie">
+      <div class="projeto-overlay">
+        <h3>Rostie</h3>
+        <p>Plataforma para gerenciamento de dispensa e recomendação de receitas.</p>
+        <a href="https://github.com/ericksntz/jornada-da-esperanca" target="_blank">Ver no GitHub</a>
+      </div>
     </div>
-    <div class="projeto">
-      <h3>Eleos</h3>
-      <p>Plataforma de gerenciamento de campanhas de doações.</p>
-      <a href="https://github.com/ericksntz/jornada-da-esperanca" target="_blank">Ver no GitHub</a>
+
+    <div class="projeto" id="eleos">
+      <div class="projeto-overlay">
+        <h3>Eleos</h3>
+        <p>Plataforma de gerenciamento de campanhas de doações.</p>
+        <a href="https://github.com/ericksntz/jornada-da-esperanca" target="_blank">Ver no GitHub</a>
+      </div>
     </div>
 
   </div>
